added portfolio adaptation

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сайт портфолио</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/media.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <header class="header">
+    <div class="block"></div>
+
+    <header class="header none">
         <h1 class="header-title">Максим Ганчарик</h1>
         <p class="header-subtitle">фрилансер, начинающий падован, веб-разработчик, создание сайтов</p>
         <div class="header-arrow">
@@ -18,7 +21,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="">
         <section class="portfolio">
             <div class="container">
                <h2 class="portfolio-header">Портфолио</h2>
@@ -69,7 +72,7 @@
             </div>
        </section>
     </main>
-    <footer class="footer">
+    <footer class="footer none">
         <div class="container">
             <div class="footer-row">
 
