added footer adaptation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="block"></div>
 
-    <header class="header none">
+    <header class="header">
         <h1 class="header-title">Максим Ганчарик</h1>
         <p class="header-subtitle">фрилансер, начинающий падован, веб-разработчик, создание сайтов</p>
         <div class="header-arrow">
@@ -21,7 +21,7 @@
         </div>
     </header>
 
-    <main class="">
+    <main>
         <section class="portfolio">
             <div class="container">
                <h2 class="portfolio-header">Портфолио</h2>
@@ -72,7 +72,7 @@
             </div>
        </section>
     </main>
-    <footer class="footer none">
+    <footer class="footer">
         <div class="container">
             <div class="footer-row">
 
