added a video background to the header on the main page with the connection of the Vide JS library

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
     <div class="block"></div>
 
-    <header class="header">
+    <header class="header" id="header">
         <h1 class="header-title">Максим Ганчарик</h1>
         <p class="header-subtitle">фрилансер, начинающий падован, веб-разработчик, создание сайтов</p>
-        <div class="header-arrow">
+        <a href="#portfolio" class="header-arrow">
             <img src="./css/img/header/chevron-down.svg" alt="Arrow">
-        </div>
+        </a>
     </header>
 
     <main>
-        <section class="portfolio">
+        <section class="portfolio" id="portfolio">
             <div class="container">
                <h2 class="portfolio-header">Портфолио</h2>
    
@@ -72,7 +72,7 @@
             </div>
        </section>
     </main>
-    
+
     <footer class="footer">
         <div class="container">
             <div class="footer-row">
@@ -117,6 +117,13 @@
             </div>
         </div>
     </footer>
+
+        <!-- Библиотеки и плагины -->
+        <script src="./libs/jquery/jquery-3.7.1.min.js"></script>
+        <script src="./libs/vide/jquery.vide.min.js"></script>
+
+        <!-- Собственные скрипты и вызовы библиотек -->
+        <script src="./js/main.js"></script>
 
 </body>
 </html>
